tests/errors/macro/macro_long_comment_without_end/comment_with_end_in_macro.c
#define name something*/

int main()
{
	/*name	// незакрытый комментарий в конце файла
	return 0;
}
